test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/operator-allnotin-01/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  background: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Deployment
    name: check-for-labels
    preconditions:
      any:
      - key: '{{ request.object.metadata.namespace }}'
        operator: AllNotIn
        value:
        - kyverno
        - def*
    validate:
      failureAction: Enforce
      message: label 'app.kubernetes.io/name' is required
      pattern:
        metadata:
          labels:
            app.kubernetes.io/name: ?*
