test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/operator-allnotin-01/resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-validate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-test
  name: nginx-test
  namespace: test-validate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
        - image: nginx
          name: nginx
