test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/operator-allnotin-01/02-script.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: script
spec:
  timeouts: {}
  try:
  - script:
      content: |
        if kubectl apply -f resource.yaml 2>&1 | grep -q "label ''app.kubernetes.io/name'' is required"
        then
          echo "Test succeeded. Resource was blocked from label."
          exit 0
        else
          echo "Tested failed. Resource was allowed to create."
          exit 1
        fi
