test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/operator-allnotin-01/04-delete.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: delete
spec:
  timeouts: {}
  try:
  - delete:
      apiVersion: apps/v1
      kind: Deployment
      name: nginx
      namespace: default
