test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/operator-allnotin-01/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: operator-allnotin-01
spec:
  steps:
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: require-labels
  - name: step-02
    try:
    - script:
        content: kubectl apply -f resource.yaml
        check:
          # This check below ensures that the string "label ''app.kubernetes.io/name'' is required" is found in stderr or else fails
          (contains($stderr, 'label \'\'app.kubernetes.io/name\'\' is required')): true
  - name: step-03
    try:
    - apply:
        file: chainsaw-step-03-apply-1-1.yaml
  - name: step-04
    try:
    - delete:
        ref:
          apiVersion: apps/v1
          kind: Deployment
          name: nginx
          namespace: default
